--- a/public/home.html
+++ b/public/home.html
@@ -22,7 +22,7 @@
       </a>
       <div class="mv4">
         <!-- Change the API link accordingly -->
-        <a href="/api/entries" class="blue link">API Entries</a> | <a
+        <a href="/api/buyers" class="blue link">List of Buyers (API)</a> | <a
           href="https://github.com/lishure/Project2" class="blue link">GitHub Repo</a>
       </div>
     </div>
