--- a/public/survey-form.html
+++ b/public/survey-form.html
@@ -75,7 +75,7 @@
 
     <div class="tc">
       <!-- Change the API link accordingly -->
-      <a href="/api/entries" class="blue link">API Entries</a> | <a href="https://github.com/lishure/Project2"
+      <a href="/api/buyers" class="blue link">List of Buyers (API)</a> | <a href="https://github.com/lishure/Project2"
         class="blue link">GitHub Repo</a>
     </div>
 
