List all buyers complete!

--- a/public/all-entries.html
+++ b/public/all-entries.html
@@ -5,14 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Mortgage Calculator</title>
+  <title>Mortgage Calculator: Buyers</title>
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css" />
 </head>
 
 <body class="sans-serif">
   <div class="ma4">
-    <h1 class="f3 f1-l fw2 mb3 mt4 mt0-ns lh-title">Mortgage Calculator: Entries</h1>
-
     <div class="pa4">
       <div class="overflow-auto">
         <table class="f6 w-100 mw8 center" cellspacing="0">
@@ -20,70 +18,14 @@
             <tr class="stripe-dark">
               <th class="fw6 tl pa3 bg-white">ID</th>
               <th class="fw6 tl pa3 bg-white">Name</th>
-              <th class="fw6 tl pa3 bg-white tc">Credit Score</th>
-              <th class="fw6 tl pa3 bg-white">Income</th>
-              <th class="fw6 tl pa3 bg-white">Down-Payment</th>
+              <th class="fw6 tl pa3 bg-white tc">Monthly Income</th>
+              <th class="fw6 tl pa3 bg-white tc">Down Payment</th>
+              <th class="fw6 tl pa3 bg-white tc">Budget</th>
+              <th class="fw6 tl pa3 bg-white tc">Credit Grade</th>
               <th class="fw6 tl pa3 bg-white tc">Action</th>
             </tr>
           </thead>
-          <tbody id="allEntries" class="lh-copy">
-
-            <!-- <tr class="stripe-dark">
-              <td class="pa3">1</td>
-              <td class="pa3">Hassan Johnson</td>
-              <td class="pa3 tc">---</td>
-              <td class="pa3">---</td>
-              <td class="pa3">---</td>
-              <td class="pa3 tc">
-                <a href="#" class="f6 link dim br-pill ph3 pv1 dib white bg-blue mr2">Edit</a>
-                <a href="#" class="f6 link dim br-pill ph3 pv1 dib white bg-dark-red">Delete</a>
-              </td>
-            </tr>
-            <tr class="stripe-dark">
-              <td class="pa3">2</td>
-              <td class="pa3">Taral Hicks</td>
-              <td class="pa3 tc">---</td>
-              <td class="pa3">---</td>
-              <td class="pa3">---</td>
-              <td class="pa3 tc">
-                <a href="#" class="f6 link dim br-pill ph3 pv1 dib white bg-blue mr2">Edit</a>
-                <a href="#" class="f6 link dim br-pill ph3 pv1 dib white bg-dark-red">Delete</a>
-              </td>
-            </tr>
-            <tr class="stripe-dark">
-              <td class="pa3">3</td>
-              <td class="pa3">Tyrin Turner</td>
-              <td class="pa3 tc">---</td>
-              <td class="pa3">---</td>
-              <td class="pa3">---</td>
-              <td class="pa3 tc">
-                <a href="#" class="f6 link dim br-pill ph3 pv1 dib white bg-blue mr2">Edit</a>
-                <a href="#" class="f6 link dim br-pill ph3 pv1 dib white bg-dark-red">Delete</a>
-              </td>
-            </tr>
-            <tr class="stripe-dark">
-              <td class="pa3">4</td>
-              <td class="pa3">Oliver Grant</td>
-              <td class="pa3 tc">---</td>
-              <td class="pa3">---</td>
-              <td class="pa3">---</td>
-              <td class="pa3 tc">
-                <a href="#" class="f6 link dim br-pill ph3 pv1 dib white bg-blue mr2">Edit</a>
-                <a href="#" class="f6 link dim br-pill ph3 pv1 dib white bg-dark-red">Delete</a>
-              </td>
-            </tr>
-            <tr class="stripe-dark">
-              <td class="pa3">5</td>
-              <td class="pa3">Dean Blanc</td>
-              <td class="pa3 tc">---</td>
-              <td class="pa3">---</td>
-              <td class="pa3">---</td>
-              <td class="pa3 tc">
-                <a href="#" class="f6 link dim br-pill ph3 pv1 dib white bg-blue mr2">Edit</a>
-                <a href="#" class="f6 link dim br-pill ph3 pv1 dib white bg-dark-red">Delete</a>
-              </td>
-            </tr> -->
-          </tbody>
+          <tbody id="allEntries" class="lh-copy"></tbody>
         </table>
       </div>
     </div>
@@ -95,7 +37,38 @@
     </div>
 
     <script>
-      fetch('/api/')
+      fetch('/api/buyers')
+        .then(response => {
+          return response.json()
+        })
+        .then(buyer => {
+          for (let i = 0; i < buyer.length; i++) {
+            let id = buyer[i].id
+            let clientName = buyer[i].clientname
+            let income = buyer[i].income
+            let cashdown = buyer[i].cashdown
+            let budget = buyer[i].budget
+            let creditGrade = buyer[i].creditgrade
+
+            let template =
+            `
+            <tr class="stripe-dark">
+              <td class="pa3">${id}</td>
+              <td class="pa3">${clientName}</td>
+              <td class="pa3 tc">${income}</td>
+              <td class="pa3 tc">${cashdown}</td>
+              <td class="pa3 tc">${budget}</td>
+              <td class="pa3 tc">${creditGrade}</td>
+              <td class="pa3 tc">
+                <a href="/edit/id:${id}" class="f6 link dim br-pill ph3 pv1 dib white bg-blue mr2">Edit</a>
+                <a href="/delete/id:${id}" class="f6 link dim br-pill ph3 pv1 dib white bg-dark-red">Delete</a>
+              </td>
+            </tr>
+            `
+            const target = document.querySelector('#allEntries')
+            target.innerHTML += template
+          }
+        })
     </script>
 
 </body>
