--- a/public/entry.html
+++ b/public/entry.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Mortgage Calculator: Edit Entry</title>
+  <title>Mortgage Calculator: Edit</title>
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css" />
   <style>
     #matchedProperty {
@@ -26,7 +26,7 @@
 
 <body class="sans-serif">
   <div class="ma4">
-    <h1 class="f3 f1-l fw2 mb3 mt4 mt0-ns lh-title">Mortgage Calculator: Update</h1>
+    <h1 class="f3 fw2 mb3 mt4 mt0-ns lh-title tc">Mortgage Calculator: Update</h1>
     <form class="mb4">
       <h2 class="lh-title">About You</h2>
       <fieldset class="bw0 ph0 pv2 mb2 mh0 w-100">
