--- a/public/survey-form.html
+++ b/public/survey-form.html
@@ -16,7 +16,6 @@
       transform: translate(-50%, -50%);
       top: 50%;
     }
-
     .overlay.active {
       background-color: rgba(0, 0, 0, .25);
       content: "";
@@ -25,7 +24,6 @@
       top: 0;
       width: 100vw;
     }
-
     .button {
       background-color:green;
       border: none;
@@ -35,6 +33,12 @@
       text-decoration: none;
       display: inline-block;
       font-size: 14px;
+      }
+    #container1 {
+      border: 1px;
+      margin: 1px -100px 1px 500px;
+      color: red;
+      font-weight: bolder;
     }
   </style>
 </head>
@@ -44,11 +48,10 @@
     <form class="mb4">
       <h2 class="lh-title">About You</h2>
       <fieldset class="bw0 ph0 pv2 mb2 mh0 w-100">
-        <legend class="b bw0 f6 pa0 ma0">Full Name</legend>
+        <legend class="b bw0 f6 pa0 ma0">Full Name (Required)</legend>
         <input type="text" id="firstName" name="firstName" class="input-reset ba b--black-20 br2 ph2 pv1 w-100"
           required>
       </fieldset>
-      <h2 class="lh-title">Questions</h2>
       <fieldset class="bw0 ph0 pv2 mb2 mh0 w-100" required>
         <legend class="b bw0 f6 pa0 ma0">Credit Score</legend>
         <select name="creditScore" id="creditScore" class="input-reset ba b--black-20 br2 ph2 pv1 w-100">
@@ -64,12 +67,12 @@
         </select>
       </fieldset>
       <fieldset class="bw0 ph0 pv2 mb2 mh0 w-100">
-        <legend class="b bw0 f6 pa0 ma0">Monthly Income</legend>
+        <legend class="b bw0 f6 pa0 ma0">Monthly Income (Required)</legend>
         <input type="number" id="incomeLevel" name="incomeLevel" class="input-reset ba b--black-20 br2 ph2 pv1 w-100"
           required>
       </fieldset>
       <fieldset class="bw0 ph0 pv2 mb2 mh0 w-100">
-        <legend class="b bw0 f6 pa0 ma0">Down Payment</legend>
+        <legend class="b bw0 f6 pa0 ma0">Down Payment (Required)</legend>
         <input type="number" id="downPayment" name="downPayment" class="input-reset ba b--black-20 br2 ph2 pv1 w-100"
           required>
       </fieldset>
@@ -79,22 +82,20 @@
         <h6>Get Today's Rate</h6>
       </a>
       <br>
-      <fieldset class="bw0 ph0 pv2 mb2 mh0 w-30">
-        <legend class="b bw0 f6 pa0 ma0">Today's Interest Rate % (Based on 30-Year Term)</legend>
+      <fieldset class="bw0 ph0 pv2 mb2 mh0 w-40">
+        <legend class="b bw0 f6 pa0 ma0">Today's Interest Rate % based on 30-Year Fixed (Required)</legend>
         <input type="number" id="interestRate" name="interestRate" class="input-reset ba b--black-20 br2 ph2 pv1 w-100"
           required>
       </fieldset>
-
-      <div class="tc">
+      <div class="container invisible" id="container1">*Please fill out all required fields*</div>
+      <button class="f6 link dim br-pill ph3 pv2 mv4 dib white bg-dark-blue input-reset bw0 pointer w-100"
+        id="submit-button" type="button">Submit</button>
+    </form>
+    <div class="tc">
         <!-- Change the API link accordingly -->
         <a href="/api/entries" class="blue link">API Entries</a> | <a href="https://github.com/lishure/Project2"
           class="blue link">GitHub Repo</a>
       </div>
-
-
-      <button class="f6 link dim br-pill ph3 pv2 mv4 dib white bg-dark-blue input-reset bw0 pointer w-100"
-        id="submit-button" type="button" data-toggle="modal" data-target="#matchedFriend">Submit</button>
-    </form>
     <!--Added Jumbotron to toggle results-->
     <div class="jumbotron jumbotron-special invisible">
       <div id="results-page">
@@ -126,33 +127,21 @@
     </div>
 
     <script>
-
       const form = document.querySelector('form')
       const modal = document.querySelector('#matchedFriend')
       const modalContent = document.querySelector('.card-body')
       const overlay = document.querySelector('.overlay')
-
-
       /*
-
         // activate modal
         modal.classList.remove('dn')
-
         // activate overlay
         overlay.classList.add('active')
-
         // when overlay is clicked, reload the page
         overlay.addEventListener('click', event => {
           event.preventDefault();
           location.reload()
         })
-
       */
-
-
-
-
-
     </script>
     <script src="survey-form.js"></script>
 </body>
