--- a/public/survey-form.html
+++ b/public/survey-form.html
@@ -78,8 +78,8 @@
       <button class="f6 link dim br-pill ph3 pv2 mv4 dib white bg-dark-blue input-reset bw0 pointer w-100" id="submit-button" type="button">Submit</button>
     </form>
 
-    <div class="tc">
-      <a href="/api/buyers" class="blue link">List of Buyers (API)</a> | <a href="https://github.com/lishure/Project2" class="blue link">GitHub Repo</a>
+    <div class="f7 tc">
+      <a href="/api/buyers" class="blue dim link">List of Buyers (API)</a> &nbsp; <a href="https://github.com/lishure/Project2" class="blue dim link">GitHub Repo</a>
     </div>
 
     <!-- Modal -->
