--- a/public/home.html
+++ b/public/home.html
@@ -28,9 +28,9 @@
       <a href="/survey" class="f3 link br-pill ph4 pv3 mb4 dib white bg-dark-blue">
         Start Questionnaire
       </a>
-      <div class="mv4 white">
-        <a href="/api/buyers" class="white link">List of Buyers (API)</a> &nbsp;&nbsp;|&nbsp;&nbsp; <a href="https://github.com/lishure/Project2"
-          class="white link">GitHub Repo</a>
+      <div class="f7 mv4 white">
+        <a href="/api/buyers" class="white dim link">List of Buyers (API)</a> &nbsp; <a href="https://github.com/lishure/Project2"
+          class="white dim link">GitHub Repo</a>
       </div>
     </div>
   </section>
