--- a/public/all-entries.html
+++ b/public/all-entries.html
@@ -7,7 +7,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Mortgage Calculator: Buyers</title>
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css" />
-
 </head>
 
 <body class="sans-serif">
@@ -75,7 +74,7 @@
               <td class="pa3 tc">$${formatMoney(budget)}</td>
               <td class="pa3 tc">${creditGrade}</td>
               <td class="pa3 tc">
-                <a href="/edit/${id}" class="btn-edit f6 link dim br-pill ph3 pv1 dib white bg-blue mr2">Edit</a>
+                <a href="/buyers/${id}" class="btn-edit f6 link dim br-pill ph3 pv1 dib white bg-blue mr2">Edit</a>
                 <a href="/api/buyers/${id}" class="btn-delete f6 link dim br-pill ph3 pv1 dib white bg-dark-red">Delete</a>
               </td>
             </tr>
