--- a/public/entry.html
+++ b/public/entry.html
@@ -56,7 +56,7 @@
         Interest Rate % based on 30-Year Fixed
       </div>
       <button class="f6 link dim br-pill ph3 pv2 mv4 dib white bg-dark-blue input-reset bw0 pointer w-100"
-        id="submit-button" type="button">Submit</button>
+        id="submit-button" type="button">Update</button>
     </form>
 
     <div class="f7 tc">
